# aquila

./: .gitignore  Makefile  README.md
cli/macos/: Makefile
cli/macos/include/: afc.h  common.h  device.h  jailbreak.h  util.h
cli/macos/src/: afc.c  device.c  jailbreak.c  main.c  util.c
cli/windows/: CMakeLists.txt  resources.rc
cli/windows/include/: afc.h  common.h  device.h  jailbreak.h  util.h
cli/windows/src/: afc.c  device.c  jailbreak.c  main.c  util.c
common/include/: common.h  exploit.h  memory.h  patches.h  patchfinder.h  util.h
common/src/: exploit.c  patches.c  patchfinder.c  sandbox.s  util.c
installer/: Makefile
installer/include/: install.h  screen.h
installer/src/: install.c  main.c  screen.c
resources/: IOMobileFramebuffer.tbd  create_payload.sh  haxx.aquila.remount.plist  launchd.conf  stock.dmg  stock.signature
untether/: Makefile
untether/src/: main.c
